...
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_affirmation"
            android:title="@string/affirmation" />
    </group>

    <group
        android:id="@+id/nav_exercise_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_breathe_helper"
            android:title="@string/breathing_helper" />
        <item
            android:id="@+id/nav_grounding"
            android:title="@string/grounding" />
        <item
            android:id="@+id/nav_mindful_stretch"
            android:title="@string/mindful_stretch" />
        <item
            android:id="@+id/nav_progressive_muscle_relaxation"
            android:title="@string/progressive_muscle_relaxation" />
        <item
            android:id="@+id/nav_body_scan_meditation"
            android:title="@string/body_scan" />
    </group>

    <group
        android:id="@+id/nav_gratitude_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todays_journal_entry"
            android:title="@string/todays_journal_entry" />
        <item
            android:id="@+id/nav_review_journal"
            android:title="@string/review_previous_entries" />
    </group>

    <group
        android:id="@+id/nav_system_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>

</menu>
