<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragments.BreatheFragment">

    <TextView
        android:id="@+id/breath_help_steps_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:lineSpacingMultiplier="1.25"
        android:text="@string/breath_steps"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <com.way2.mindful_reminder.views.CircleProgressBar
        android:id="@+id/progress_donut"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        app:progressText="Start"
        app:progressTextSize="30dp"
        app:progressbarColor="?attr/colorPrimary"
        app:progressBarThickness="10dp"
        android:contentDescription="@string/content_description_breathe_counter"
        />

</LinearLayout>