<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_daily_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DailyMindfulnessActivity">

    <TextView
        android:id="@+id/daily_mindfulness_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="visible" />

    <TextView
        android:id="@+id/daily_mindfulness_activity_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="325dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible" />

</RelativeLayout>