<resources>
    <string name="mindfulReminder">Mindful Reminder</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="aboutBody">Mindful Reminder is an all-in-one mindfulness app designed to help users cultivate a positive mindset and improve their mental health. With daily affirmations and notifications throughout the day, users can stay motivated and focused on their goals. The built-in gratitude journal and worry tracker allow users to reflect on their emotions and experiences, gaining a deeper understanding of their mental and emotional state.
        In addition, Mindful Reminder also features a breathing tracker for the popular 4-7-8 breathing technique, which is known to help reduce stress and anxiety. The app also includes a grounding exercise to help users stay centered and focused in their daily life.
        Whether you\'re new to mindfulness or an experienced practitioner, Mindful Reminder has everything you need to take your mental health to the next level.
    </string>
    <string name="aboutGitHubLink">https://github.com/way-2/mindful-reminder</string>
    <string name="helpBodyStart">
        Welcome to the Help Page for Mindful Reminder!
        \n\n
        Mindful Reminder is a simple and easy-to-use app designed to help you stay mindful and focused on the present moment. Here are some helpful tips on how to use the app:
    </string>
    <string name="helpBodyEnd">We hope that you find Mindful Reminder helpful in cultivating mindfulness and positivity in your daily life. Thank you for choosing Mindful Reminder!</string>
    <string name="helpBodyList">
        \u2022 On the main screen, you will see a positive affirmation displayed. If you don\'t like the current affirmation, you can simply click the "skip" button to display a new one.
        \n
        \u2022 The Settings menu can be accessed by clicking on the menu icon in the top right corner of the screen. Here you can turn notifications on and off and set the interval for receiving notifications.
        \n
        \u2022 If you would like to turn off notifications altogether, simply toggle the notification button to "off" in the Settings menu.
        \n
        \u2022 To set the interval for receiving notifications, click on the "Notification Interval" option in the Settings menu.
    </string>
    <string name="skip">Skip</string>
    <string name="settings">Settings</string>
    <string name="switchTitle">Switch</string>
    <string name="notification_header">Notification Preferences</string>
    <string name="notification_title">Toggle Affirmation Notifications</string>
    <string name="breathing_helper">Breathing Helper</string>
    <string name="home">Home</string>
    <string name="affirmation">Daily Affirmation</string>
    <string name="mindfulness_activity">Daily Mindfulness Activity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="breath_steps">Find a comfortable and quiet place where you can sit or lie down, then press the Start button
    \n\n
    1) Take a deep breath in through your nose, filling your lungs with air for a count of 4 seconds.
    \n
    2) Hold your breath for a count of 7 seconds.
    \n
    3) Exhale slowly through your mouth for a count of 8 seconds, making a whooshing sound as you exhale.
    \n
    4) Repeat the cycle of inhaling for 4 seconds, holding for 7 seconds, and exhaling for 8 seconds.</string>
    <string name="start">Start</string>
    <string name="groundingBody">5–4–3–2–1 Grounding is a mindfulness technique that can help you to feel more present and centered. Take a deep breath in and out, now lets get started.</string>
    <string name="groundingSee">Look around you and identify 5 things you can see. They can be anything from a piece of furniture to a plant or picture on the wall.</string>
    <string name="groundingTouch">Now notice 4 things you can touch. This can be anything from the ground beneath your feet to the fabric of your clothes.</string>
    <string name="groundingHear">Listen for 3 sounds that you can hear. This can be the sound of traffic outside to the hum of a fan or the ticking of a clock.</string>
    <string name="groundingSmell">Identify 2 things that you can smell. This can be things like the aroma of coffee, or food, or the scent of flowers.</string>
    <string name="groundingTaste">Finally, focus on 1 thing you can taste. This can be a sip of water or a piece of fruit or anything else that you can taste in your mouth.</string>
    <string name="groundingComplete">You can repeat this exercise as many times as necessary to feel more centered and present, press the Start button to begin again.</string>
    <string name="grounding">Grounding Exercise</string>
    <string name="daily_activity_notifications">Toggle Daily Activity Notification</string>
    <string name="daily_affirmation">Your daily reminder</string>
    <string name="gratitude_journal">Mindfulness Journal</string>
    <string name="todays_journal_entry">Today\'s Journal Entry</string>
    <string name="review_previous_entries">Review Previous Entries</string>
    <string name="gratitude_journal_intro_1">A gratitude journal is used to practice gratitude and appreciation by writing down things from the day that you are thankful for.  The idea behind it is to push you to focus on the good things in your life, in this way you can train yourself to be more optimistic.
        \n\nBy regularly writing down the things you are grateful for, you can start to shift your focus away from negative thoughts and emotions.</string>
    <string name="gratitude_journal_intro_2">Take a few minutes each day and note down three to five things you  are grateful for. These can be big or small things, such as a good cup of coffee, a supportive friend, or a beautiful sunset.</string>
    <string name="gratitude_journal_intro_3">Practicing gratitude regularly through a gratitude journal can have many benefits, including improving mood, reducing stress, and promoting a sense of well-being. It can also help you focus on the positive aspects of your life and feel more connected to the world around you.</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="your_mindfulness_journal">Your Mindfulness Journal</string>
    <string name="gratitude_notification_title">Toggle Mindfulness Journal Notifications</string>
    <string name="daily_gratitude_header_text">Am grateful for?</string>
    <string name="daily_worry_header_text">Have been worrying about?</string>
    <string name="today_i">Today I…</string>
    <string name="how_was_today_text">Felt overall?</string>
    <string name="happy_icon">\uf118</string>
    <string name="sad_icon"></string>
    <string name="unhappy_icon"></string>
    <string name="meh_icon"></string>
    <string name="estatic_icon"></string>
    <string name="angry_icon"></string>
    <string name="title_activity_how_are_you_feeling_button_group">HowAreYouFeelingButtonGroup</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send_feedback">Send feedback or suggestions (new affirmations?) to dw.mindful.reminder@gmail.com or checkout the source code at https://github.com/way-2/mindful-reminder</string>
    <string name="export_button">Export</string>
    <string name="journal_category">Mindfulness Journal Preferences</string>
    <string name="import_button">Import</string>
    <string name="shows_an_inspirational_image">Shows an inspirational image</string>
    <string name="border_around_inspirational_image">Border around inspirational image</string>
    <string name="content_description_daily_activity_content">Displays content of the selected date including: Gratitude entry, Worry entry, How I am feeling and Daily affirmation</string>
    <string name="content_description_gratitude_entry_box">Text box to enter your gratitude journal entry for the day</string>
    <string name="content_description_grounding_activity_counter_button">Counter for the grounding activity, pressing it increases the counter</string>
    <string name="content_description_worry_entry_box">Text box to input your entry on what you have been worrying about today</string>
    <string name="additional_credits">Additional Credits</string>
    <string name="license">License Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_mindful_stretching_start_button">Used to step through the mindful stretching routine.</string>
    <string name="mindful_stretch">Mindful Stretching</string>
    <string name="content_description_next_button">This button steps forward in the exercise</string>
    <string name="body_scan">Body Scan Meditation</string>
    <string name="progressive_muscle_relaxation">Progressive Muscle Relaxation</string>
    <string name="content_description_breathe_counter">Counter for the breathing exercise</string>
</resources>