...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragments.GroundingFragment">

    <TextSwitcher
        android:id="@+id/grounding_text_switcher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_weight="8"
        android:inAnimation="@anim/nav_default_enter_anim"
        android:outAnimation="@anim/nav_default_exit_anim"
...
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />
    </TextSwitcher>

    <com.way2.mindful_reminder.views.CircleProgressBar
        android:id="@+id/progress_donut"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        app:progressText="Start"
        app:progressTextSize="40dp"
        app:progressbarColor="?attr/colorPrimary"
...
